--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: "Reem Kufi Fun", sans-serif;
+    font-family: "El Messiri", sans-serif;
     font-optical-sizing: auto;
     direction: rtl;
     word-wrap: normal;
@@ -21,11 +21,16 @@ body {
     color: white;
     width: 100vw;
     height: 100vh;
-}
+    background-attachment: fixed;
 
+}
+.q1{
+    margin-top: 200px;
+
+}
 .q1 h3 {
     font-size: 1.975rem;
-    margin-top: 200px;
+    /* margin-top: 200px; */
 }
 
 * {
@@ -135,6 +140,11 @@ html {
     border: 5px solid #5A705A;
 
 }
+#myInput{
+    color: #FBC917;
+    font-family: "El Messiri", sans-serif;
+    text-align: center;
+}
 
 .answer {
     flex-direction: column;
@@ -165,7 +175,7 @@ html {
     width: auto;
     margin-top: 40px;
     text-align: center;
-    background-color: #E7D9CE;
+    background-color: #162731;
     border-radius: 30px;
     padding: 5px;
     color: #ff0202;
@@ -179,4 +189,10 @@ html {
     transition: all 1s ease-in-out;
     color: #ff0202;
     padding: 15px 10px 5px 10px;
+}
+
+
+.q2{
+    margin-right: 50px;
+    margin-top: 150px;
 }
