change url image

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 
 body {
-    background: url(../eid\ mubark\ pcpng2.png);
+    background: url(https://i.ibb.co/K7Gm1nD/eid-mubark-pcpng2.png);
     background-size: cover;
     background-repeat: no-repeat;
     /* overflow: hidden; */
