--- a/media query/midea.css
+++ b/media query/midea.css
@@ -36,41 +36,33 @@
     .col-s-9 {
         width: 75%;
     }
-
     .col-s-10 {
         width: 83.33%;
     }
-
     .col-s-11 {
         width: 91.66%;
     }
-
     .col-s-12 {
         width: 100%;
     }
-
     .view_position {
         margin-top: 50%;
         width: 100%;
     }
-
     .answer {
         flex-direction: column;
     }
-
     .ratio_answer {
         margin-top: 25px;
     }
-
     body {
-        background: url(../eidmubark\ mobile.jpg) no-repeat center center fixed;
+        background: url(https://i.ibb.co/q1gBrFK/eidmubark-mobile.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: 100% 100%;
         color: white;
         height: 100%;
-        
     }
     .input-group__input {
         color: #000000;
