--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 
 body {
-    background: url(https://i.ibb.co/K7Gm1nD/eid-mubark-pcpng2.png);
+    background: url(/eid_mubark2.png);
     background-size: cover;
     background-repeat: no-repeat;
     /* overflow: hidden; */
@@ -24,10 +24,12 @@ body {
     background-attachment: fixed;
 
 }
-.q1{
+
+.q1 {
     margin-top: 200px;
 
 }
+
 .q1 h3 {
     font-size: 1.975rem;
     /* margin-top: 200px; */
@@ -140,7 +142,8 @@ html {
     border: 5px solid #5A705A;
 
 }
-#myInput{
+
+#myInput {
     color: #FBC917;
     font-family: "El Messiri", sans-serif;
     text-align: center;
@@ -192,7 +195,7 @@ html {
 }
 
 
-.q2{
+.q2 {
     margin-right: 50px;
     margin-top: 150px;
 }
