--- a/media query/midea.css
+++ b/media query/midea.css
@@ -87,11 +87,11 @@
         margin-right: 0;
         margin-left: calc(-.5* var(--bs-gutter-x));
     }
-    .q2{
+    .q_space{
         margin-right: 20px;
         margin-top: 0px;
     }
-    .q1{
+    .name_section{
         margin-top: 0px;
     }
 }
