--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,39 @@ html {
 .hide1 {
     display: none;
 }
+.finish_message{
+    /* background-color: #FBC917; */
+    text-align: center;
+    font-family: "Marhey", system-ui;
+
+}
+.finish_message h1{
+ margin-bottom: 50px;
+}
+#special_message{
+    font-family: "Marhey", system-ui;
+    text-align: center;
+    font-size: 20px;
+    color: #FBC917;
+    margin-top: 30px;
+    border: 1px solid #d1fb17;
+    border-radius: 30px;
+    /* width: 50%; */
+    margin: 0 200px 0 200px;
+}
+
+.message_no_answer{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: #ff0202;
+    border: 1px solid #d1fb17;
+    border-radius: 40px;
+    padding: 20px;
+    background: #4f6e6b4b;
+}
+p {
+    margin-top: 0;
+    margin-bottom: 0rem;
+}
