--- a/media query/midea.css
+++ b/media query/midea.css
@@ -94,4 +94,39 @@
     .name_section{
         margin-top: 0px;
     }
+    .finish_message{
+        /* background-color: #FBC917; */
+        text-align: center;
+        font-family: "Marhey", system-ui;
+        margin-top: 50px;
+    
+    }
+    .finish_message h1{
+        margin-bottom: 50px;
+    }
+    #special_message{
+        font-family: "Marhey", system-ui;
+        text-align: center;
+        font-size: 20px;
+        color: #FBC917;
+        margin-top: 50px;
+        border: 1px solid #d1fb17;
+        border-radius: 30px;
+        padding: 5px;
+        margin: 0 30px 0 30px;
+    }
+    .message_no_answer{
+        position:absolute;
+        top:50%;
+        left:50%;
+        transform: translateX(-50%) translateY(-50%);
+        color: #ff0202;
+        border: 1px solid #d1fb17;
+        border-radius: 40px;
+        padding: 20px;
+        background: #162731;
+        width: 80%;
+        text-align: center;
+        z-index: 100;
+    }
 }
