--- a/css/style.css
+++ b/css/style.css
@@ -207,8 +207,10 @@ html {
     width: 100%;
     height: 100%;
     position: absolute;
-    bottom: 0px;
-    left: 0px;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    right: 0;
     pointer-events: none;
     /* background-color: #55C0B3; */
 }
@@ -239,7 +241,7 @@ html {
 
 .message_no_answer{
     position:absolute;
-    top:50%;
+    top:60%;
     left:50%;
     transform: translateX(-50%) translateY(-50%);
     color: #ff0202;
