--- a/media query/midea.css
+++ b/media query/midea.css
@@ -117,16 +117,30 @@
     }
     .message_no_answer{
         position:absolute;
-        top:50%;
+        top:60%;
         left:50%;
         transform: translateX(-50%) translateY(-50%);
         color: #ff0202;
-        border: 1px solid #d1fb17;
+        border: 1px solid #d1fb1700;
         border-radius: 40px;
         padding: 20px;
-        background: #162731;
+        background: #16273100;
         width: 80%;
         text-align: center;
         z-index: 100;
+    }
+    .Next_btn{
+        margin-top: 30px;
+    }
+    .svg {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        top: 0;
+        right: 0;
+        pointer-events: none;
+        /* background-color: #55C0B3; */
     }
 }
