fix background to github

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 
 body {
-    background: url(/eid_mubark2.png);
+    background: url(eid_mubark2.png);
     background-size: cover;
     background-repeat: no-repeat;
     /* overflow: hidden; */
