--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 
 body {
-    background: url(eid_mubark2.png);
+    background: url(https://i.ibb.co/0nDqL0W/eid-mubark2.png);
     background-size: cover;
     background-repeat: no-repeat;
     /* overflow: hidden; */
@@ -169,6 +169,7 @@ html {
     border: 5px solid #f3bf98;
     transition: all 0.5s ease;
 }
+
 .Next_btn:focus {
     background-color: #5a705a7e;
     border: 5px solid #f3bf98;
@@ -204,6 +205,7 @@ html {
     margin-right: 50px;
     margin-top: 150px;
 }
+
 .svg {
     width: 100%;
     height: 100%;
@@ -219,16 +221,19 @@ html {
 .hide1 {
     display: none;
 }
-.finish_message{
+
+.finish_message {
     /* background-color: #FBC917; */
     text-align: center;
     font-family: "Marhey", system-ui;
 
 }
-.finish_message h1{
- margin-bottom: 50px;
+
+.finish_message h1 {
+    margin-bottom: 50px;
 }
-#special_message{
+
+#special_message {
     font-family: "Marhey", system-ui;
     text-align: center;
     font-size: 20px;
@@ -240,10 +245,10 @@ html {
     margin: 0 200px 0 200px;
 }
 
-.message_no_answer{
-    position:absolute;
-    top:60%;
-    left:50%;
+.message_no_answer {
+    position: absolute;
+    top: 60%;
+    left: 50%;
     transform: translateX(-50%) translateY(-50%);
     color: #ff0202;
     border: 1px solid #d1fb17;
@@ -251,6 +256,7 @@ html {
     padding: 20px;
     background: #4f6e6b4b;
 }
+
 p {
     margin-top: 0;
     margin-bottom: 0rem;
