--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .name_section {
-    margin-top: 200px;
+    margin-top: 80px;
 
 }
 
@@ -156,25 +156,31 @@ html {
 }
 
 .ratio_answer {
-    margin-top: 25px;
+    margin-top: 20px;
 }
 
 .Next_btn {
     background-color: #E7D9CE;
     border: 5px solid #5A705A;
     border-radius: 35px;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+
 }
 
 .Next_btn:hover {
     background-color: #5a705a7e;
     border: 5px solid #f3bf98;
     transition: all 0.5s ease;
+    color: white;
 }
 
 .Next_btn:focus {
     background-color: #5a705a7e;
     border: 5px solid #f3bf98;
     transition: all 0.5s ease;
+    color: white;
 }
 
 .form-check-input:checked {
@@ -184,22 +190,24 @@ html {
 
 .message {
     width: auto;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     text-align: center;
-    background-color: #162731;
+    /* background-color: #162731; */
     border-radius: 30px;
     padding: 5px;
     color: #ff0202;
-    border: 1.5px solid #ff0202;
-    transition: all 1s ease-in-out;
+    /* border: 1.5px solid #ff0202; */
+    /* transition: all 1s ease-in-out; */
     font-family: "El Messiri", sans-serif;
 }
 
 .appear_message {
-    padding-top: 5px;
-    transition: all 1s ease-in-out;
+    /* padding-top: 5px; */
+    /* transition: all 1s ease-in-out; */
     color: #ff0202;
-    padding: 15px 10px 5px 10px;
+    /* padding: 15px 10px 5px 10px; */
+    position: absolute;
+    top: 0;
 }
 
 .q_space {
@@ -219,9 +227,9 @@ html {
     /* background-color: #55C0B3; */
 }
 
-.hide1 {
+/* .hide1 {
     display: none;
-}
+} */
 
 .finish_message {
     /* background-color: #FBC917; */
@@ -247,18 +255,83 @@ html {
 }
 
 .message_no_answer {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
     color: #ff0202;
-    border: 1px solid #d1fb17;
-    border-radius: 40px;
-    padding: 20px;
-    background: #4f6e6b4b;
+    /* background-color: #d1fb17; */
+    width: 100%;
+    text-align: center;
 }
 
 p {
     margin-top: 0;
     margin-bottom: 0rem;
+}
+
+.submit {
+    /* background-color: #55C0B3; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 115px;
+    position: relative;
+    /* background-color: #d1fb17; */
+
+}
+
+#frist_btn {
+    position: absolute;
+    bottom: 0;
+}
+
+.btn {
+    position: absolute;
+    bottom: 0;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-background-clip: text;
+    border: 6px solid #dfe208;
+    -webkit-text-fill-color: #ffe600;
+    /* transition: background-color 5000s ease-in-out 0s; */
+}
+
+.text_input{
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    outline: none;
+    box-sizing: border-box;
+}
+.form-control {
+    display: block;
+    width: 60%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--bs-body-color);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #3f5a698c;
+    background-clip: padding-box;
+    border: 3px solid #eeff00;
+    border-radius: var(--bs-border-radius);
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    color: #ffffff;
+
+}
+/* .textarea_input{
+    background-color: #55C0B3;
+} */
+.form-control:focus{
+    background-color: #3f5a698c;
+    color: #ffffff;
+
 }
