--- a/css/style.css
+++ b/css/style.css
@@ -335,3 +335,31 @@ input:-webkit-autofill:active {
     color: #ffffff;
 
 }
+.q11 h3{
+    font-size: 25px;
+    text-align: center;
+}
+
+#result_num{
+    font-size: 50px;
+    font-family: "Marhey", system-ui;
+    text-align: center;
+    color: #FBC917;
+    margin-top: 60px;
+    border: 8px solid #00ff0d;
+    border-radius: 50%;
+    padding: 90px 60px;
+    
+}
+
+.result_card{
+    width: 100%;
+    height: 100%;
+    /* background-color: #fbca174d; */
+    text-align: center;
+    font-family: "Marhey", system-ui;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
